grammar.txt
/* A BNF grammar for AA suitable for https://smlweb.cpsc.ucalgary.ca/start.html */

Prog  -> Stmts.
Stmts -> Stmt  ; Stmts  /* multiple statements */
       | Stmt           /* final ; is optional */
       | .
Id    -> x | y | z.
Stmt  -> Id # Ifex     /* variable assignment */
       | ret Ifex.
Ifex  -> Apply.
Apply -> Expr.
Expr  -> Term
       | Term + Term.
Term  -> Id ++
       | Fact Post.
Post  -> _ Id   Post   /* .field lookup, but cannot use '.' */
       | ( Id ) Post   /* function call */
       | (( Stmts )) Post /* array lookup */
       | _ Id ++
       | _ Id # Stmt   /* .field assignment */
       | .
Fact  -> Id
       | 3
       | (( Stmts )) /* Array allocation: [ Stmts ] */
       | ( Stmts ).
