src/main/java/com/cliffc/aa/Parse.java
package com.cliffc.aa;

import com.cliffc.aa.node.*;
import com.cliffc.aa.type.*;
import com.cliffc.aa.util.*;

import java.text.NumberFormat;
import java.text.ParsePosition;
import java.util.BitSet;

import static com.cliffc.aa.AA.*;
import static com.cliffc.aa.type.TypeFld.Access;

/*** an implementation of language AA
 *
 *  GRAMMAR:
 *  prog = stmts END
 *  stmts= [tstmt|stmt][; stmts]*[;]? // multiple statements; final ';' is optional
 *  tstmt= tid = :type             // type identifier assignment
 *  stmt = [id[:type] [:]=]* ifex  // ids are (re-)assigned, and are available in later statements
 *  stmt = ^ifex                   // Early function exit
 *  ifex = apply [? stmt [: stmt]] // trinary short-circuit logic; missing ":stmt" will default to 0
 *  apply= expr  | expr expr*      // Lisp-like application-as-adjacent
 *  expr = term [binop term]*      // gather all the binops and sort by precedence
 *  term = uniop term              // Any number of prefix uniops
 *  term = id++ | id--             //   then postfix update ops
 *  term = tfact bop+ stmts bop-      // Balanced/split operator arity-2, e.g. array lookup, ary [ idx ]
 *  term = tfact bop+ stmts bop- stmt // Balanced/split operator arity-2, e.g. array assign, ary [ idx ]:= val
 *  term = tfact post              //   A term is a tfact and some more stuff...
 *  post = empty                   // A term can be just a plain 'tfact'
 *  post = (tuple) post            // Application argument list
 *  post = .field post             // Field and tuple lookup
 *  post = .field [:]= stmt        // Field (re)assignment.  Plain '=' is a final assignment
 *  post = .field++ | .field--     // Allowed anytime a := is allowed
 *  post = ->field                 // deref an alloc
 *  post = :type post              // TODO: Add this, remove 'tfact'
 *  tfact= fact[:type]             // Typed fact
 *  fact = id                      // variable lookup
 *  fact = num                     // number
 *  fact = "string"                // string
 *  fact = bop+ stmts bop-         // Balanced/split operator, arity-1, e.g. array decl with size: [ 17 ]
 *  fact = bop+ [stmts,[stmts,]*] bop-  // Balanced/split operator, arity-N, e.g. array decl with elements: [ "Cliff", "John", "Lisa" ]
 *  fact = (stmts)                 // General statements parsed recursively
 *  fact = (tuple)                 // Tuple builder
 *  fact = func                    // Anonymous function declaration
 *  struct=@{ stmts }              // Anonymous struct declaration, assignments define fields
 *  tuple= (stmts,[stmts,])        // Tuple; final comma is optional, first comma is required
// In progress ideas
// *  fact = struct                  // A fact is also a struct
// *  fact = tuple                   // A fact is also a tuple
// *  fact = ptr                     // A fact is a ptr
// *  ptr  = &tuple, &struct         // Allocation; stuff a struct/tuple into memory and get a pointer
// *  fact = *ptr                    // Prefix ptr-deref; produces a LHS...
 *  binop= +-*%&|/<>!= [ ]=        // etc; primitive lookup; can determine infix binop at parse-time
 *  uniop= -!~# a                  // etc; primitive lookup; can determine infix uniop at parse-time
 *  bop+ = [                       // Balanced/split operator open
 *  bop- = ] ]= ]:=                // Balanced/split operator close
 *  func = { [id[:type]* ->]? stmts} // Anonymous function declaration, if no args then the -> is optional
 *                                 // Pattern matching: 1 arg is the arg; 2+ args break down a (required) tuple
 *  str  = [.\%]*                  // String contents; \t\n\r\% standard escapes
 *  str  = %[num]?[.num]?fact      // Percent escape embeds a 'fact' in a string; "name=%name\n"
 *
 *  type = tcon | tid | tvar | [?!]tptr | [?]tfun // "?" is nilable-ref, "!" is not-nil ref, missing is value-type
 *  tptr = tary | tstruct | ttuple
 *  tid  = type identifier         // NOT all-upper-case; LHS of type assignment
 *  tvar = HM type variable        // ALL upper-case; scoped this type expr only
 *  tcon = = ifex                  // Noticed extra '=', must bake down to a constant; usually for fcns
 *  tfun = { [[type]* -> ]? type } // Mirrors func decls; ie. map=: {{A->B} [A] -> [B]}
 *  tary = [type]                  // Array types
 *  ttuple = ( [[type],]* )        // Tuple types are just a list of optional types;
 *                                 // the count of commas dictates the length, zero commas is zero length.
 *                                 // Tuple fields are always final.
 *  tstruct= [tid:]@{ [tfld;]* };  // Optional named type to extend, list of fields
 *  tfld = id [:type | tcon]       // Field name, option type or const-expr
 *

 *
 * Structs and Types:
 *
 * Structs are a collection of fields; fields name other values.  All fields
 * can be optionally typed; the types can be forward references.  Missing types
 * are inferred.
 *
 * The same struct syntax is used in 4 cases: A normal object allocation, an
 * anonymous type struct, a named value-type, and a named reference type.
 *
 * Normal values (e.g. primitives) have no memory identity, are not allocated
 * and the "==" test is deep: each field is tested via "==" and this is a
 * bitwise test.  Hence simple primitive ints and flts are just tested via a
 * simple bit test.
 *
 * Value types (Vals) are a collection of normal values; the aggregate is
 * itself a value; it has no memory identity (pointer), is not allocated, is
 * not freed, is pass-by-value and does not allow side-effects on members.
 * Under the hood optimizations may do, e.g. COW optimizations.
 *
 * Anonymous struct declarations have fields and field modifiers, but do not
 * allow any exprs.  They are a type, not a value.
 *
 * Normal objects have a memory identity (pointer), require allocation and
 * lifetime management.  The "==" test is via ref/pointer only.  They have
 * mutable fields and allow side-effects.  The construction allows expressions
 * which are executed as the struct is built.
 *
 * Vals and Refs (reference) types are top-level named type assignments.  They
 * make a constructor; a Val constructor makes values and a Ref constructor
 * makes normal objects.  Constructors are always automatically defined; if you
 * want a classic C++ or Java constructor, make a factory function instead.
 *
 * All fields can be marked mutable or not; the default varies.
 *
 * All fields require initialization; if an expr is not provided either a 0 or
 * an argument will be used in the constructor.  This varies from Vals vs Refs.
 *
 * If an expression is a constant, it is precomputed and moved into a prototype
 * object (i.e. a C++ or Java "class" object), will be fetched on demand and
 * takes no space in object instances.  This is the common case for instance
 * functions and global constants.
 *
 *      Syntax             Obj         Val           Ref       Anon
 *  fld [:type]     ;   r/w  ,  0   final, arg    r/w,    0    r/w     // arg in ValType, 0   elsewhere
 *  fld [:type]  =  ;   final,  0   final, arg    final, arg   final   //  0  in ObjType, arg elsewhere
 *  fld [:type] :=  ;   r/w  ,  0   error         r/w,    0    r/w     // err in ValType; no mutable fields
 *  fld [:type]  =e0;   final, e0   final, e0     final, e0    error   //                                    error in Anon, no value
 *  fld [:type] :=e0;   r/w  , e0   error         r/w,   e0    error   // err in ValType; no mutable fields; error in Anon, no value
 *
 *
 * The Display
 *
 * The Parser builds an IR presentation of the program semantics, which has
 * some subtleties.  See FunNode and CallNode for how function headers adnd
 * call sites are represented.  See FunPtrNode for a discussion on the "fat"
 * function pointers AA uses.  Included in function pointer is the Display, or
 * "Environment" variable - a hidden extra variable representing the accessible
 * call-stack of non-local variables.  AA supports full closures, and a full
 * closure requires its stack to be heap allocated.  Hence the display might be
 * implemented as a non-local stack offset or it might be a heap object.
 * Keeping this explicit in the IR allows me to clone an outer function with a
 * escaping display without requiring cloning all the escaping inner functions.

 * Example:  Simple function to generate a private counter:
 *    gen = { cnt; ({cnt},{cnt++}) };
 *    (cntA,incA) = gen();  // Generate A counter, with a getter and incrementer
 *    (cntB,incB) = gen();  // Generate B counter, with a getter and incrementer
 *    incA(); incA(); incB();       // Now counter A=2 and B=1
 *    assert cntA()==2 && cntB==1;  // Assert counters are independent
 *
 * Here the variable 'cnt' escapes the lifetime of 'gen' and gen's display must
 * be stack allocated.
 *
 * Example: Same, except the inner functions are brought out at the top-level:
 *    _cnt = { cnt  } // Direct access to 'gen.cnt'
 *    _inc = { cnt++} // Direct access to 'gen.cnt'
 *    gen = { cnt; ( _cnt, _inc ) }
 * And then we clone 'gen':
 *    gen2 = { cnt; ( _cnt, _inc ) }
 * But _cnt and _inc refer to the original 'gen' counter and not the new one.
 *
 * Example: Same, except the display is explicit:
 *    _cnt = { dsp -> dsp.cnt  } // Code, not fptr, needs display
 *    _inc = { dsp -> dsp.cnt++} // Code, not fptr, needs display
 *    gen  = { dsp  = @{cnt}; ( (_cnt,dsp ), (_inc,dsp ) ) }
 * And cloning gen:
 *    gen2 = { dsp2 = @{cnt}; ( (_cnt,dsp2), (_inc,dsp2) ) }
 * Here the two 'gen's can share their inner functions but use different displays.
 *
 *
 * The Display is also available during @{} structure initialization, as a
 * default argument to nested functions.
 *
 * Example:
 *   circle = @{ r=1.0; area = { -> 2*math.pi*r } }  // Uses 'r'
 *   square = @{ x=1.2; area = { -> x*x } }          // Uses 'x'
 *
 * Each following init code is allowed to use all the fields that came before
 * it (plus itself for recursive functions), and is treated like a function
 * taking a hidden display argument of the structure itself.
 *
 * Example: x = @{ fld1=init1; fld2=init2; ... }
 * Becomes: x = @{ fld1=0; fld2=0; ... }; x.fld1=init1(x); x.fld2=init2(x);...
 * Except the init1 does not get to use any x fields, the init2 call can only
 * use fld1 and so forth.  The init codes can change mutable fields as well.
 *
 */

public class Parse implements Comparable<Parse> {
  public static Parse PARSE;    // Helps with debug printing during parsing
  private final String _src;    // Source for error messages; usually a file name
  private Env _e;               // Lookup context; pushed and popped as scopes come and go
  private final byte[] _buf;    // Bytes being parsed
  private int _x;               // Parser index
  private int _lastNWS;         // Index of last non-white-space char
  private final AryInt _lines;  // char offset of each line

  // List of Nodes mid-construction, not allowed to peephole away (yet)
  private final Ary<Node> _keeps;

  // Fields strictly for Java number parsing
  private final NumberFormat _nf;
  private final ParsePosition _pp;
  private final String _str;

  Parse( String src, Env env, String str ) {
    _src = src;
    _e   = env;
    _buf = str.getBytes();
    _x   = 0;

    // Set fields strictly for Java number parsing
    _nf = NumberFormat.getInstance();
    _nf.setGroupingUsed(false);
    _pp = new ParsePosition(0);
    _str = str;           // Keep a complete string copy for java number parsing
    _lines = new AryInt();//
    _lines.push(0);       // Line 0 at offset 0
    _keeps = new Ary<>(Node.class);
    StructNode stk = scope().stk();
    stk.add_fld("$dyn",Access.Final,new DefDynTableNode().init(),null);
  }

  // Debugging hook
  String p() { return NodePrinter.prettyPrint(_keeps); }

  /** Parse a top-level:
   *  prog = stmts END */
  public ErrMsg prog() {
    PARSE = this;               // Helps with debug printing during parsing
    Node res = stmts();
    if( res == null ) res = Env.ANY;
    scope().rez(res);           // Hook result
    // Close file scope; no more program text in this file, so no more fields to add.
    scope().stk().close();
    PARSE = null;
    return skipWS() == -1 ? null : ErrMsg.trailingjunk(this);
  }

  /** Parse a list of statements; final semicolon is optional.
   *  stmts= [tstmt or stmt] [; stmts]*[;]?
   */
  private Node stmts() { return stmts(false); }
  private Node stmts(boolean lookup_current_scope_only) {
    Node stmt = tstmt(), last=null;
    if( stmt == null ) stmt = stmt(lookup_current_scope_only);
    while( stmt != null ) {
      if( !peek(';') ) return stmt;
      int bal = _keeps._len;    // Balanced keep-alives
      last = keep(stmt);
      stmt = tstmt();
      if( stmt == null ) stmt = stmt(lookup_current_scope_only);
      if( stmt == null ) {
        if( peek(';') ) { _x--; stmt=last; }   // Ignore empty statement
      }
      if( unkeep(last) != stmt && last.nUses()==0 )
        last.kill(); // prior expression result no longer alive in parser
      assert bal == _keeps._len; // Balanced keep-alives
    }
    return last;
  }

  /** A type-statement assigns a type to a type variable.  Type variable
   *  assignments are always final, and can not exist before assignment (hence
   *  a variable cannot have a normal value and be re-assigned as a type
   *  variable).
   *
   *  tstmt = tvar = : type  // Value type
   *
   *  Value types are final-assigned; all fields are final and immutable.
   *  Fields not otherwise assigned are required by the constructor.  The
   *  constructor wraps the fields with a simple name; the result is not
   *  allocated (compiler lifetime managed), has no identity, and uses bit-wise
   *  comparisons.  Value types support field lookups on structs, with fields
   *  set with constant expressions being moved to the prototype object (i.e.
   *  "class" object).
   *
   *
   *  tstmt = tvar = : [?!]type // Reference type
   *
   *  Reference types are mutable-assigned; fields are mutable by default and
   *  mutable fields are not filled in by the constructor.  The constructors do
   *  allocation; the result has an identity, an explicit lifetime needing
   *  management, and uses pointer-comparison.  As with value types, fields set
   *  with final constant expressions are moved to the prototype.
   */
  private Node tstmt() {
    int oldx = _x;
    String tok = token();      // Scan for tvar
    if( tok == null || !peek('=') || !peek(':') )
      { _x=oldx; return null; } // Not a type assignment
    byte c = skipWS();
    if( c == -1 ) return null;  // No next character
    tok = tok.intern();
    String tname = (tok+":").intern(); // As a type name
    boolean is_val = !(c=='?' || c=='!'); // Value vs reference type

    // Types are forward-defined in two contexts, so either or both might
    // already have happened: as a type (in a type annotation) and as a
    // standard fref in a fact() (probably as a constructor call).
    // Look for a prior type assignment, from e.g. a type annotation

    //// Make a forward-ref constructor, if not one already
    //ForwardRefNode construct = (ForwardRefNode)_e.lookup(tok);
    //if( construct==null ) construct = val_fref(tok,errMsg());
    //else if( !construct.is_forward_ref() )
    //  return err_ctrl2("Cannot re-assign val '"+tok+"' as a type");
    //construct.scoped();
    //
    //// Make a forward-ref type, if not one already
    //StructNode typenode  = _e.lookup_type(tname);
    //if( typenode == null ) typenode = type_fref(tname,is_val); // None, so create
    //else throw TODO(); // Double-define error
    //
    //// Nest an environment for parsing named type contents, usually const-expr initializers
    //int pidx;
    //try( Env e = new Env(_e, null, false, ctrl(), mem(), _e._scope.stk(), typenode) ) {
    //  _e = e;                   // Push nested environment
    //
    //  Type newtype = type(typenode);
    //  if( newtype==null ) return err_ctrl2("Missing type after ':'");
    //
    //  // Value or reference type
    //  if( newtype instanceof TypeMemPtr ) {
    //    typenode.close();
    //    typenode.define();                           // No longer a forward ref
    //    if( is_val ) {
    //      //// Build a default constructor, add to the pile of constructors
    //      //construct.add_def(typenode.defalt().fill());
    //      //construct.define();     // Value type is defined
    //      if( true ) throw TODO();
    //    } else
    //      throw TODO();         // Reference type
    //
    //  } else {
    //    // Other types?  e.g. defining a named function-type needs a breakdown of
    //    // the returned function to make a TypeFunSig.  No constructor in this
    //    // case, but can be used in type-checks.
    //    // TODO: Need to toss the un-needed typenodeb
    //    throw TODO();
    //  }
    //
    //  e._par._scope.ctrl(ctrl()); // Carry any control changes back to outer scope
    //  e._par._scope.mem (mem ()); // Carry any memory  changes back to outer scope
    //  _e = e._par;                    // Pop nested environment
    //  pidx = construct.push();        // A pointer to the constructed object
    //} // Pop lexical scope around type parse
    //
    //return Node.pop(pidx);
    throw TODO();
  }

  /** A statement is a list of variables to final-assign or re-assign, and an
   *  ifex for the value.  The variables are available in all later statements.
   *  Final-assigned variables can never be assigned again.  Forward references
   *  must be defined in the same scope (or higher) as the outermost pending def.
   *  This is the same as a lambda calc LetRec expression: "let id = def in ..."
   *
   *  stmt = [id[:type] [:]=]* ifex
   *  stmt = id     // Implicit variable creation with nil
   *  stmt = ^ifex  // Early function exit
   *
   *  Note the syntax difference between:
   *    stmt = id := val  //    re-assignment
   *    stmt = id  = val  // final assignment
   *   tstmt = id =:type  // type variable decl, type assignment
   *
   *  The ':=' is the re-assignment token, no spaces allowed.
   *
   * To handle "mutual let rec" we record enough information to detect
   * definition cycles as we go.  When we first start parsing an assignment
   * for A, we set A as a "scoped" forward ref:
   *    A = scoped_fref...
   * then we parse A's definition.  At the end of parsing, we change A's
   * forward ref to "defined" and replace it in-place in the struct.
   *
   * If, during the parsing of A's definition, we discover an unknown variable
   * B, we add that as an UNscoped forward ref in the scope.  We also record
   * that A's def depends on B - a possible mut let rec.  We might also
   * discover prior unscoped defs or previous cyclic defs; in any case we
   * record on A all those (possibly cyclic) defs.
   *
   * If we start a def for a prior-unscoped def, we go ahead and move it to
   * "scoped", and then parse as normal.
   *
   * Example:
   * A = { x -> rand ? B(x) : x };
   * D = {   -> rand ? B(1) : C(2) };
   * C = { x -> A(x) };
   * B = { x -> C(x) };
   *
   * Here {A,B,C} make a mutual let rec, and the cycle is all an big identity
   * function: any type can be passed into any of {A,B,C}.  Whereas D is NOT
   * part of this cycle and always returns an int.
   *
   * The representation of a *scoped forward-ref* is either the `null` or an
   * actual scoped ForwardRefNode.  We can use `null` normally if there's no
   * cyclic defs.
   */
  private Node stmt(boolean lookup_current_scope_only) {
    if( peek('^') ) {           // Early function exit
      Node ifex = ifex();
      if( ifex==null ) ifex = Env.NIL;
      if( _e._par._par==null )
        return err_ctrl1(ErrMsg.syntax(this,"Function exit but outside any function"));
      return _e.early_exit(this,ifex);
    }

    // Gather ids in x = y = z = ....
    Ary<String> toks = new Ary<>(new String[1],0);
    Ary<Type  > ts   = new Ary<>(new Type  [1],0);
    Ary<Parse > badfs= new Ary<>(new Parse [1],0);
    Ary<Parse > badts= new Ary<>(new Parse [1],0);
    BitSet rs = new BitSet();
    boolean default_nil = false;
    while( true ) {
      skipWS();
      int oldx = _x;            // Unwind token parse point
      Parse badf = errMsg();    // Capture location in case of field error
      String tok = token();     // Scan for 'id = ...'
      if( tok == null ) break;  // Out of ids
      if( !isAlpha0((byte)tok.charAt(0)) ) { _x=oldx; break; } // not a "[id]* ->"
      int oldx2 = _x;           // Unwind assignment flavor point
      Type t = null;
      // x  =: ... type  assignment, handled before we get here
      // x  =  ... final assignment
      // x :=  ... var   assignment
      // x : type  = ... typed final assignment
      // x : type := ... typed var   assignment
      // x : nontype = ... error, missing type
      // p? x : nontype ... part of trinary
      Parse badt = errMsg();    // Capture location in case of type error
      if( peek(":=") ) _x=oldx2; // Avoid confusion with typed assignment test
      else if( peek(':') && (t=type())==null ) { // Check for typed assignment
        if( _e.test_if() ) _x = oldx2; // Grammar ambiguity, resolve p?a:b from a:int
        else err_ctrl0("Missing type after ':'");
      }
      if( peek(":=") ) rs.set(toks._len);              // Re-assignment parse
      else if( !peek_not('=','=') ) {                  // Not any assignment
        // For structs, allow a bare id as a default def of nil
        if( lookup_current_scope_only && ts.isEmpty() && (peek(';') || peek('}') ||
        // These next two tokens are syntactically invalid, but a semi-common error situation:
        //   @{ fld;fld;fld;...  fld );  // Incorrect closing paren.  Go ahead and allow a bare id.
                                                          peek(']') || peek(')' ))) {
          _x--;                 // Push back statement end
          default_nil=true;     // Shortcut def of nil
          rs.set(toks._len);    // Shortcut mutable
        } else {
          _x = oldx; // Unwind the token parse, and try an expression parse
          break;     // Done parsing assignment tokens
        }
      }

      toks .add(tok.intern());
      ts   .add(t);
      badfs.add(badf);
      badts.add(badt);
    }

    // * Create new local fields for new tokens, in case of mut-let-rec
    // * Parse the `ifex`, uses of the new or unknown fields may add to mut-let-rec sets.
    // * Assign to previous defs with stores
    // * Assign to new local fields, changing unscope-to-scoped, and scoped-to-defined
    ScopeNode escope = scope();

    // Create new local fields for new tokens, in case of mut-let-rec
    for( int i=0; i<toks._len; i++ ) {
      String tok = toks.at(i);               // Token being assigned
      Access mutable = rs.get(i) ? Access.RW : Access.Final;  // Assignment is mutable or final
      ScopeNode scope = lookup_scope(tok,lookup_current_scope_only);
      if( scope==null ) {        // Create new tokens with null fields - shortcut for scoped frefs
        ForwardRefNode fref = new ForwardRefNode(tok,badfs.at(i)).init();
        fref.scope();
        escope.stk().add_fld(tok,mutable,fref,badts.at(i));
      }
    }


    // Normal statement value parse
    Node ifex = default_nil ? Env.NIL : ifex(); // Parse an expression for the statement value
    // Check for no-statement after start of assignment, e.g. "x = ;"
    if( ifex == null ) {        // No statement?
      if( toks._len == 0 ) return null;
      ifex = err_ctrl2("Missing ifex after assignment of '"+toks.last()+"'");
    }

    // Assign
    for( int i=0; i<toks._len; i++ ) {
      String tok = toks.at(i);               // Token being assigned
      Access mutable = rs.get(i) ? Access.RW : Access.Final;  // Assignment is mutable or final
      ScopeNode scope = lookup_scope(tok,lookup_current_scope_only);
      ifex = do_store(scope,ifex,mutable,tok,badfs.at(i),ts.at(i),badts.at(i));
    }

    return ifex;
  }

  // Assign into display, changing an existing def.
  // The scope of the assignment is 'scope', or null to create in the local scope.
  private Node do_store(ScopeNode scope, Node ifex, Access mutable, String tok, Parse badf, Type t, Parse badt ) {
    if( ifex instanceof FunPtrNode fptr )
      fptr.bind(tok);           // Debug only: give name to function

    // Assert type if asked for
    if( t!=null )
      ifex = new AssertNode(mem(), ifex, t, badf).peep();

    // Find initial set
    StructNode stk = scope.stk();
    int idx = stk.find(tok);

    // See if assigning over a forward-ref.
    if( stk.in(idx) instanceof ForwardRefNode fref ) {
      assert Util.eq(tok,fref._name);
      // Now set in this scope
      if( fref.isNotScoped() ) fref.scope();
      return fref.assign( ifex, _e ); // Define & assign the forward-ref
    }

    // Save across display load
    int bal = _keeps._len;    // Balanced keep-alives
    keep(ifex);

    // Load the display/stack-frame for the defining scope.
    Node ptr = get_display_ptr(scope); // Pointer, possibly loaded up the display-display
    // Store into the defining scope (not necessarily local scope)
    mem( new StoreNode(mem(),ptr,ifex,tok,mutable,badf).peep() );
    if( mutable==Access.Final ) Oper.make(tok,false);
    ifex = unkeep(ifex);
    assert bal == _keeps._len;  // Balanced keep-alives
    return ifex;
  }

  /** Parse an if-expression, with lazy eval on the branches.  Assignments to
   *  new variables are allowed in either arm (as-if each arm is in a mini
   *  scope), and variables assigned on all live arms are available afterwards.
   *  ifex = expr [? stmt [: stmt]]
   */
  private Node ifex() {
    Node expr = apply();
    if( expr == null ) return null; // Expr is required, so missing expr implies not any ifex
    if( !peek('?') ) return expr;   // No if-expression

    int bal = _keeps._len;      // Balanced keep-alives

    Node omem = keep(mem());    // Keep until parse false-side
    // KEEP: {MEM}
    Node ifex = keep(new IfNode(ctrl(),expr).peep());
    // KEEP: {MEM, IFEX}
    ctrl(new CProjNode(ifex,1).peep()); // Control for true branch

    // True side
    ScopeNode t_scope, f_scope;
    try( Env e = _e = new Env(_e, null, -1, ctrl(), mem(), scope().ptr(), null) ) { // Nest an environment for the local vars
      // TODO: Insert cast
      Node t_exp = stmt(false); // Parse true expression
      if( t_exp == null ) t_exp = err_ctrl2("missing expr after '?'");
      t_scope = scope();
      t_scope.stk().close();
      t_scope.setDef(REZ_IDX,t_exp);
      // Shuffle lifetimes for the true/false flip
      // KEEP: {MEM, IFEX}
      unkeep(ifex);
      // KEEP:{MEM}
      unkeep(omem);
      // KEEP:{}
      keep(t_scope);
      // KEEP:{TSCOPE}
      _e = e._par;            // Pop nested environment
    }

    mem(omem);           // Reset memory to before the IF for the other arm
    ctrl(new CProjNode(ifex,0).peep()); // Control for false branch

    // False side
    try( Env e = _e = new Env(_e, null, -1, ctrl(), mem(), scope().ptr(), null) ) { // Nest an environment for the local vars
      // TODO: Insert cast
      Node f_exp = peek(':') ? stmt(false) : con(TypeNil.NIL);
      if( f_exp == null ) f_exp = err_ctrl2("missing expr after ':'");
      f_scope = scope();
      f_scope.stk().close();
      f_scope.setDef(REZ_IDX,f_exp);
      // KEEP:{TSCOPE}
      keep(f_scope);
      // KEEP:{TSCOPE, FSCOPE}
      _e = e._par;            // Pop nested environment
    };

    // Find common set of new names
    // KEEP:{TSCOPE, FSCOPE}
    unkeep(f_scope);
    unkeep(t_scope);
    // KEEP:{}
    StructNode f_stk = f_scope.stk();
    StructNode t_stk = t_scope.stk();
    Parse bad = errMsg();

    // Merge results.
    // KEEP: NO PEEPS ON REGION -- vvvvvvvvvvvvvvvvvvvv
    ctrl(new RegionNode(null,t_scope.ctrl(),f_scope.ctrl()).init());

    // Walk both sides and introduce error stores on 1-sided defs
    for( int i=1; i<f_stk.len(); i++ ) {
      String fld = f_stk.fld(i);
      scope().stk().add_fld(fld,Access.RW,Env.ANY,null); // Promote name to top level
      if( t_stk.find(fld)== -1 ) {
        Node err = new ErrNode(f_scope.ctrl(),bad,"'"+fld+"' not defined on "+true+" arm of trinary").init();
        t_scope.mem(new StoreNode(t_scope.mem(),t_scope.ptr(),err,fld,Access.RW,bad).peep());
      }
    }

    for( int i=1; i<t_stk.len(); i++ ) {
      String fld = t_stk.fld(i);
      if( t_stk.find(fld)== -1 ) {
        scope().stk().add_fld(fld,Access.RW,Env.ANY,null); // Promote name to top level
        Node err = new ErrNode(t_scope.ctrl(),bad,"'"+fld+"' not defined on "+false+" arm of trinary").init();
        f_scope.mem(new StoreNode(f_scope.mem(),f_scope.ptr(),err,fld,Access.RW,bad).peep());
      }
    }

    mem(       new PhiNode(TypeMem.ALLMEM,null,ctrl(),t_scope.mem (),f_scope.mem ()).peep());
    Node rez = new PhiNode(TypeNil.SCALAR,bad ,ctrl(),t_scope.rez (),f_scope.rez ()).peep() ;
    // KEEP: NO PEEPS ON REGION -- ^^^^^^^^^^^^^^^^^^^^
    keep(rez);
    // KEEP: {REZ}

    //Env.GVN.add_unuse(f_scope);
    //Env.GVN.add_unuse(t_scope);
    f_scope.kill();
    t_scope.kill();

    unkeep(rez);
    // KEEP: {}
    assert bal == _keeps._len;  // Balanced keep-alives
    return rez;
  }


  /** Parse a lisp-like function application.  To avoid the common bug of
   *  forgetting a ';', these must be on the same line.
      apply = expr
      apply = expr expr*
   */
  private Node apply() {
    Node expr = expr();
    if( expr == null ) return null;
    while( true ) {
      int bal = _keeps._len;    // Balanced keep-alives
      skipWS();
      int oldx = _x;
      int old_last = _lastNWS;
      keep(expr);               // Keep alive across argument parse
      Node arg = expr();
      if( arg==null ) return unkeep(expr);
      // To avoid the common bug of forgetting a ';', these must be on the same line.
      int line_last = _lines.binary_search(old_last);
      int line_now  = _lines.binary_search(_x);
      if( line_last != line_now ) {
        _x = oldx;  _lastNWS = old_last;
        return err_ctrl2("Lisp-like function application split between lines "+line_last+" and "+line_now+", but must be on the same line; possible missing semicolon?");
      }
      expr = doCall(errMsgs(oldx,oldx),args(expr,dynCall(),arg)); // Pass the dyn and 1 arg
      assert bal == _keeps._len; // Balanced keep-alives
    }
  }

  /** Parse an expression, a series of terms separated by binary operators.
   *  Precedence is encoded in the PrimNode.PRECEDENCE table, and reflects
   *  here by the expr# recursive calls.
   *    expr = term [binop term]*
   *  Calls out for the precedence, starting high and working down low.
   *    expr  = expr9 [binop9 expr9]
   *    expr9 = expr8 [binop8 expr8]
   *    ...
   *    expr2 = expr1 [binop2 expr1]
   *    expr1 = term  [binop1 term ]
   */
  private Node expr() {
    skipWS();         // Invariant: WS already skipped before & after each expr depth
    return _expr(1);
  }

  // Invariant: WS already skipped before & after each _expr depth
  private Node _expr(int prec) {
    int lhsx = _x;              // Invariant: WS already skipped
    Node lhs = _expr_higher(prec);
    if( lhs==null ) return null;
    while( true ) {             // Kleene star at this precedence
      int bal = _keeps._len;    // Balanced keep-alives
      // Look for a binop at this precedence level
      int opx = _x;             // Invariant: WS already skipped
      String tok = token0();
      Oper binop = Oper.bin_op(tok,prec);
      if( binop==null ) { _x=opx; return lhs; }
      _x -= binop.adjustx(tok); // Chosen op can be shorter than tok
      skipWS();
      int rhsx = _x;            // Invariant: WS already skipped
      keep(lhs);
      Parse err = errMsg(opx);
      // Load against LHS pointer.  If this is a primitive, the Load loads
      // against the primitive clazz.
      Node over= new LoadNode(mem(),lhs,binop._name,false,err).peep();
      // DynTable to call
      Node dyn = keep(dynCall());
      // Resolve the set of primitive choices
      Node fun = keep(new DynLoadNode(mem(),over,(AFieldNode)dyn.in(0),err).peep());
      // Parse the RHS operand
      Node rhs = binop._lazy
        ? _lazy_expr(binop)
        : _expr_higher_require(binop);
      //
      // Emit the call to both terms
      fun = unkeep(fun);
      dyn = unkeep(dyn);
      lhs = unkeep(lhs);
      // LHS in unhooked prior to optimizing/replacing.
      lhs = doCall(errMsgs(opx,lhsx,rhsx), args(lhs,dyn,rhs));
      // Invariant: LHS is unhooked
      assert bal == _keeps._len; // Balanced keep-alives
    }
  }

  // Get an expr at the next higher precedence, or a term, or null
  private Node _expr_higher( int prec ) {
    return prec+1 == Oper.MAX_PREC ? term() : _expr(prec+1);
  }
  private Node _expr_higher_require( Oper op ) {
    Node rhs = _expr_higher(op._prec);
    return rhs==null ? err_ctrl2("Missing term after '"+op._name+"'") : rhs;
  }

  // Parse a RHS operand into a 'thunk', a zero-arg function.
  // Function takes in memory, display
  private Node _lazy_expr(Oper op) {
    int bal = _keeps._len;      // Balanced keep-alives
    int rhsx = _x;
    FunNode fun = new FunNode(ARG_IDX); // ctrl, mem, display
    keep(fun);                          // Keep alive
    fun.xval();
    NewNode outer_dsp = scope().ptr();

    // Build Parms for system incoming values
    Node rpc = new ParmNode(CTL_IDX,fun,null,TypeRPC.ALL_CALL).init();
    Node dsp = new ParmNode(DSP_IDX,fun,null,outer_dsp._tptr ).init();
    Node mem = new ParmNode(MEM_IDX,fun,null,TypeMem.ALLMEM  ).init();
    Node fptr;
    try( Env e = new Env(_e, fun, 1, fun, mem, dsp, null) ) { // Nest an environment for the local vars
      _e = e;                   // Push nested environment
      // Display is special: the default is simply the outer lexical scope.
      // But here, in a function, the display is actually passed in as a hidden
      // extra argument and replaces the default.
      StructNode frame = e._scope.stk();
      assert fun==_e._fun && fun==_e._scope.ctrl();
      // Parse body
      Node rez = _expr_higher_require(op);
      if( rez==null ) throw TODO();
      // Normal exit
      frame.close();

      // Merge normal exit into all early-exit paths.
      // TODO: this exits from the thunk, not the whole function
      assert frame.is_closure();
      rez = merge_exits(rez);
